# depot-charging-optimization

./: .gitignore  LICENSE  README.md  clean_data.py  gurobi.env  main.py  preprocess_data.py  pyproject.toml  requirements.txt  run_all_feasible_simultaneously  run_all_processed_data  utils.py
config/: env.yaml  file.yaml  heuristic.yaml  mpc.yaml  optimizer.yaml
data/: battery.json  energy_price.csv  grid_tariff.csv
data/sample/: depot01_vehicle01.json  depot02_vehicle01.json  depot02_vehicle02.json  depot02_vehicle03.json  depot03_vehicle01.json  depot03_vehicle02.json  depot03_vehicle03.json  depot03_vehicle04.json  depot03_vehicle05.json  depot03_vehicle06.json  depot03_vehicle07.json  depot03_vehicle08.json
optimization/: optimization.py  utils.py
src/depot_charging_optimization/: api.py  config.py  controller.py  core.py  dashboard.py  data_models.py  environment.py  logging.py  plots.py  result_store.py  simulator.py  utils.py
src/depot_charging_optimization/optimizer/: base.py  casadi.py  gurobi.py  spec.py
src/depot_charging_optimization/scripts/: clean_data.py  compose_cycles.py  dashboard.py  dashboard_runner.py  fastapi_plot.py  list_cycles.py  mcp.py  mpc.py  optimize.py  plotting.py  plotting_webapp.py  preprocess_data.py  simulate.py
src/depot_charging_optimization/templates/: dashboard.html
tests/: conftest.py  test_casadi_optimization.py  test_charger.py  test_cycle_compose.py  test_gurobi_optimization.py  test_input.py  test_optimization.py  test_optimization_input.py  test_optimizers.py  test_simulation.py  test_simulator.py  test_utils.py
