[project]
name = "depot-charging-optimization"
version = "0.0.1"
description = "Depot Charging Optimization"
requires-python = ">=3.11"
dependencies = [
    "casadi==3.7.0",
    "pyyaml>=6.0.2",
    "pydantic>=2.11.7",
    "pandas-stubs==2.3.2.250926",
    "click>=8.2.1",
    "gurobipy>=13.0.0",
    "numpy>=2.3.2",
    "plotly>=6.4.0",
    "ruff>=0.14.4",
    "rich>=14.2.0",
    "pytest>=9.0.0",
    "fastapi>=0.121.1",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.2",
    "tqdm>=4.67.1",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
]

[project.scripts]
optimize = "depot_charging_optimization.scripts.optimize:main"
simulate = "depot_charging_optimization.scripts.simulate:simulate"
clean-data = "depot_charging_optimization.scripts.clean_data:clean_data"
preprocess-data = "depot_charging_optimization.scripts.preprocess_data:preprocess_data"
plot = "depot_charging_optimization.scripts.plotting_webapp:serve"
list-cycles = "depot_charging_optimization.scripts.list_cycles:list_cycles"
compose-cycles = "depot_charging_optimization.scripts.compose_cycles:compose_cycles"
mpc = "depot_charging_optimization.scripts.mpc:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_executable = ".venv/bin/python"
ignore_missing_imports = true
