[project]
name = "depot-charging-optimization"
version = "0.0.1"
description = "Depot Charging Optimization"
requires-python = ">=3.11"
dependencies = [
    "casadi==3.7.0",
    "pandas-stubs==2.3.2.250926",
    "mypy>=1.11",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
    "plotly-stubs>=0.0.6",
    "click>=8.2.1",
    "numpy>=2.3.2",
    "gurobipy>=13.0.0",
    "plotly>=6.4.0",
    "ruff>=0.14.5",
    "rich>=14.2.0",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pandas>=2.3.2",
]

[project.optional-dependencies]
notebooks = [
    "jupyter",
    "matplotlib",
    "seaborn",
    "tqdm",
]

[project.scripts]
optimize = "depot_charging_optimization.scripts.optimize:optimize"
simulate = "depot_charging_optimization.scripts.simulate:simulate"
clean-data = "depot_charging_optimization.scripts.clean_data:clean_data"
preprocess-data = "depot_charging_optimization.scripts.preprocess_data:preprocess_data"
plot = "depot_charging_optimization.scripts.plotting_webapp:serve"
list-cycles = "depot_charging_optimization.scripts.list_cycles:list_cycles"
compose-cycles = "depot_charging_optimization.scripts.compose_cycles:compose_cycles"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_executable = ".venv/bin/python"
ignore_missing_imports = true
