[project]
name = "depot-charging-optimization"
version = "0.0.1"
description = "Depot Charging Optimization"
requires-python = ">=3.11,<3.14"
dependencies = [
    "casadi==3.7.0",
    "pandas-stubs==2.3.2.250926",
    "mypy>=1.11",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
    "plotly-stubs>=0.0.6",
    "click>=8.2.1",
    "numpy>=2.3.2",
    "gurobipy>=13.0.0",
    "plotly>=6.4.0",
    "ruff>=0.14.5",
    "rich>=14.2.0",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pandas>=2.3.2",
    "pyyaml>=6.0.2",
    "scipy>=1.16.3",
    "kaleido>=1.2.0",
    "tqdm>=4.67.1",
    "jupyter>=1.1.1",
    "scipy-stubs>=1.16.3.3",
    "types-pyyaml>=6.0.12.20250915",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
]

[project.scripts]
optimize = "depot_charging_optimization.scripts.optimize:main"
mpc = "depot_charging_optimization.scripts.mpc:main"
simulate = "depot_charging_optimization.scripts.simulate:main"
clean-data = "depot_charging_optimization.scripts.clean_data:main"
preprocess-data = "depot_charging_optimization.scripts.preprocess_data:main"
dashboard = "depot_charging_optimization.scripts.dashboard_runner:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
python_executable = ".venv/bin/python"
ignore_missing_imports = true
